--- a/src/pages/weather_page/components/weekly_forecast/weeklyForecast.scss
+++ b/src/pages/weather_page/components/weekly_forecast/weeklyForecast.scss
@@ -7,7 +7,6 @@
 	justify-content: space-around;
 	align-items: center;
 	gap: 1px;
-	overflow: scroll;
 	padding: 0;
 	&_day {
 		width: 100%;
