--- a/src/pages/weather_page/components/wind_info/windInfo.scss
+++ b/src/pages/weather_page/components/wind_info/windInfo.scss
@@ -2,6 +2,7 @@
 	display: flex;
 	flex-direction: column;
 	&_description {
+		height: 100%;
 		display: flex;
 	}
 	&_title {
